# takuzu

./: .gitignore  Cargo.toml  LICENSE  build.bat
src/: Board.js  Tile.js  gen_board.rs  get-preact.bat  main.htm  main.rs
src/ui/: Board.js  Tile.js  colorUtils.js  main.htm  validation.js  vibrant.js
