[package]
name = "takuzu"
version = "0.0.1"
authors = ["Nick Hilton <nhilton777@gmail.com>"]
description = "Takuzu game"
homepage = "https://github.com/geekster777/takuzu"
repository = "https://github.com/geekster777/takuzu"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
sciter-rs = "*"